bug 1407562 - Fix in-content HTML selects and about:telemetry "Raw JSON" element for RTL locales r=chutten
The arrow icon in about:telemetry's process <select> overlapped the text in RTL.
It turns out that this was also a problem in a couple of other places in the UI,
including the Add New Credit Card and And New Address dialogs for form autofill.
Now, those are fixed too.

On the about:telemetry page, the "Raw JSON" element is in the appropriate place now.
Earlier it was on the left in RTL locales.

UltraBlame original commit: 696538512fd9d37623d7ff3ed6c311d86266671e

--- a/toolkit/content/aboutTelemetry.css
+++ b/toolkit/content/aboutTelemetry.css
@@ -149,6 +149,22 @@ left
 0
 ;
 }
+body
+[
+dir
+=
+rtl
+]
+#
+category
+-
+raw
+{
+right
+:
+0
+;
+}
 .
 heading
 {
