--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -1560,6 +1560,38 @@ ellipsis
 }
 html
 |
+select
+:
+not
+(
+[
+size
+]
+)
+:
+not
+(
+[
+multiple
+]
+)
+:
+dir
+(
+rtl
+)
+{
+background
+-
+position
+:
+left
+3px
+center
+;
+}
+html
+|
 button
 :
 enabled
